# strategies-builder

./: README.md
app/backend/: README.md  pyproject.toml
app/backend/src/: main.py
app/backend/src/api/: __init__.py  optimize.py  trade.py  workflows.py
app/backend/src/core/: config.py
app/backend/src/data/seed/: BTCUSDT_15m.csv  workflow.json
app/backend/src/db/: __init__.py  models.py
app/backend/src/engine/: __init__.py
app/backend/src/exchange/: __init__.py  base.py  binance.py  paper.py
app/backend/src/nodes/: __init__.py
app/backend/src/nodes/backtest/: simple.py
app/backend/src/nodes/filters/: pullback_fibo.py
app/backend/src/nodes/indicators/: macd.py  vol_ma.py
app/backend/src/nodes/notifiers/: telegram.py
app/backend/src/nodes/signals/: __init__.py  cross.py  logic.py
app/backend/src/nodes/sources/: mock_csv.py
app/backend/src/optimizer/: __init__.py  service.py
app/backend/src/schemas/: __init__.py
app/backend/src/services/: risk.py  trade.py
app/backend/src/tasks/: optimizer.py  trade.py
app/backend/tests/: test_optimizer.py  test_risk.py
app/frontend/: README.md  index.html  package.json
app/frontend/src/: OptimizeModal.tsx  main.tsx
docker/: .env.example  docker-compose.yml
