[project]
name = "strategy-builder-backend"
version = "0.1.0"
description = "Backend for strategy builder"
requires-python = ">=3.11"

[project.dependencies]
fastapi = "^0.105.0"
uvicorn = {extras=["standard"], version="^0.24.0"}
pydantic = "^2.3.0"
sqlalchemy = "^2.0.0"
asyncpg = "^0.29.0"
celery = "^5.3.0"
redis = "^5.0.0"
structlog = "^23.1.0"
ccxt = "^4.1.0"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
